--- a/Sarcasm_generation.ipynb
+++ b/Sarcasm_generation.ipynb
@@ -34,7 +34,7 @@
         "colab_type": "text"
       },
       "source": [
-        "** IMPORTS **"
+        "# We load all the required librairies"
       ]
     },
     {
@@ -51,19 +51,14 @@
       "source": [
         "from __future__ import print_function, division\n",
         "from builtins import range, input\n",
-        "\n",
         "import os, sys\n",
-        "\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
         "from keras.models import Model\n",
         "from keras.layers import Input, LSTM, GRU, Dense, Embedding, Bidirectional\n",
         "from keras.preprocessing.text import Tokenizer\n",
         "from keras.preprocessing.sequence import pad_sequences\n",
         "from keras.utils import to_categorical\n",
-        "import numpy as np\n",
-        "import pandas as pd\n",
-        "import matplotlib.pyplot as plt\n",
-        "import IPython.display as display\n",
-        "\n",
         "import keras.backend as K\n",
         "if len(K.tensorflow_backend._get_available_gpus()) > 0:\n",
         "  from keras.layers import CuDNNLSTM as LSTM\n",
@@ -72,8 +67,14 @@
         "from keras.callbacks import LearningRateScheduler\n",
         "from keras.models import load_model\n",
         "from keras import regularizers\n",
-        "\n",
+        "import matplotlib.pyplot as plt\n",
+        "import IPython.display as display\n",
         "import math\n",
+        "!pip install -U -q PyDrive\n",
+        "from pydrive.auth import GoogleAuth\n",
+        "from pydrive.drive import GoogleDrive\n",
+        "from google.colab import auth\n",
+        "from oauth2client.client import GoogleCredentials\n",
         "from numpy.random import seed\n",
         "seed(9012)"
       ],
@@ -103,34 +104,13 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "2dk65VE-DdI3",
-        "colab_type": "code",
-        "outputId": "1fe69d5a-3924-45c3-92cb-54c0894b0f81",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+        "id": "cdibQXeov1RN",
+        "colab_type": "text"
       },
       "source": [
-        "import gc\n",
-        "gc.collect()"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "22"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 2
-        }
+        "# 0. Loading the trained models or selecting a new one by modifying the hyperparameters\n"
       ]
     },
     {
@@ -242,6 +222,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lQj6dyYkwWE8",
+        "colab_type": "text"
+      },
+      "source": [
+        "# 1. Getting the data from google drive"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "BwQg7Is9zEcp",
@@ -253,11 +243,6 @@
         }
       },
       "source": [
-        "!pip install -U -q PyDrive\n",
-        "from pydrive.auth import GoogleAuth\n",
-        "from pydrive.drive import GoogleDrive\n",
-        "from google.colab import auth\n",
-        "from oauth2client.client import GoogleCredentials\n",
         "# Authenticate and create the PyDrive client.\n",
         "auth.authenticate_user()\n",
         "gauth = GoogleAuth()\n",
@@ -309,6 +294,16 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XoeeSDaXwsuS",
+        "colab_type": "text"
+      },
+      "source": [
+        "# 2. Data Preprocessing"
       ]
     },
     {
@@ -561,11 +556,10 @@
         "colab": {}
       },
       "source": [
-        "\n",
         "def count(x):\n",
         "  return len(x.split())\n",
         "data_clean['words_comment'] = data_clean.apply(lambda x: count(x[\"comment\"]), axis=1)\n",
-        "data_clean['words_parent_comment'] = data_clean.apply(lambda x: count(x[\"parent_comment\"]), axis=1)\n"
+        "data_clean['words_parent_comment'] = data_clean.apply(lambda x: count(x[\"parent_comment\"]), axis=1)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -637,20 +631,6 @@
           "name": "stdout"
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "WbvU96d3Nikz",
-        "colab_type": "code",
-        "cellView": "both",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -825,9 +805,7 @@
         "print(\"decoder_inputs[0]:\", decoder_inputs[0])\n",
         "print(\"decoder_inputs.shape:\", decoder_inputs.shape)\n",
         "\n",
-        "decoder_targets = pad_sequences(target_sequences, maxlen=max_len_target, padding='post')\n",
-        "\n",
-        "\n"
+        "decoder_targets = pad_sequences(target_sequences, maxlen=max_len_target, padding='post')"
       ],
       "execution_count": 0,
       "outputs": [
@@ -913,19 +891,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Sb3xUm1VQ0Te",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "mhpRgk1WwoRl",
         "colab_type": "code",
         "outputId": "a1656e6e-d46d-423d-f476-6da15b9d91ac",
@@ -969,8 +934,7 @@
         "# assign the values\n",
         "for i, d in enumerate(decoder_targets):\n",
         "  for t, word in enumerate(d):\n",
-        "    decoder_targets_one_hot[i, t, word] = 1\n",
-        "\n"
+        "    decoder_targets_one_hot[i, t, word] = 1"
       ],
       "execution_count": 0,
       "outputs": [
@@ -1196,6 +1160,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Lf39D_XsxJ0W",
+        "colab_type": "text"
+      },
+      "source": [
+        "# 3. Encoder-Decoder Model"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "VPgxQluZwoR3",
@@ -1418,6 +1392,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "E5q6hTpNxb-s",
+        "colab_type": "text"
+      },
+      "source": [
+        "# 4. Make predictions"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "rIhOF9NGfsXk",
@@ -1425,8 +1409,6 @@
         "colab": {}
       },
       "source": [
-        "##### Make predictions #####\n",
-        "\n",
         "encoder_model = Model(encoder_inputs_placeholder, encoder_states)\n",
         "\n",
         "\n",
